--- a/index.ipynb
+++ b/index.ipynb
@@ -89,7 +89,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "import sqlite3\n",
+    "import pn"
    ]
   },
   {
