--- a/index.ipynb
+++ b/index.ipynb
@@ -91,7 +91,8 @@
    "source": [
     "# Your code here\n",
     "import sqlite3\n",
-    "import pn"
+    "import pandas as pd\n",
+    "conn"
    ]
   },
   {
