Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,7 @@
     "# Your code here\n",
     "import sqlite3\n",
     "import pandas as pd\n",
-    "conn"
+    "conn = sqlite3()"
    ]
   },
   {
