--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,7 @@
     "# Your code here\n",
     "import sqlite3\n",
     "import pandas as pd\n",
-    "conn = sqlite3()"
+    "conn = sqlite3('babe_')"
    ]
   },
   {
