Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,8 @@
     "# Your code here\n",
     "import sqlite3\n",
     "import pandas as pd\n",
-    "conn = sqlite3('babe_')"
+    "conn = sqlite3('babe_ruth.db')\n",
+    "cur = conn.cus"
    ]
   },
   {
