Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -104,7 +104,7 @@
     "# Your code here\n",
     "import sqlite3\n",
     "import pandas as pd\n",
-    "conn = sqlite3('babe_ruth.db')\n",
+    "conn = sqlite3.connection('babe_ruth.db')\n",
     "cur = conn.cursor()"
    ]
   },
