Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "cur.excute()"
    ]
   },
   {
