--- a/index.ipynb
+++ b/index.ipynb
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "cur.excute()"
+    "cur.excute('''SELECT year''')"
    ]
   },
   {
