Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "cur.excute('''SELECT year, COUNT(year)''')"
+    "cur.excute('''SELECT year, COUNT(year)''').f"
    ]
   },
   {
