Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "cur.excute('''SELECT year, COUNT(year)''').fetchall()"
+    "cur.excute('''SELECT year, COUNT(year) as number_years''').fetchall()"
    ]
   },
   {
