Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT year, COUNT(year) as number_years FROM babe_ruth_stats''').fetchall()"
+    "cur.execute('''SELECT COUNT(year)FROM babe_ruth_stats''').fetchall()"
    ]
   },
   {
