--- a/index.ipynb
+++ b/index.ipynb
@@ -140,7 +140,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELEC''')"
+    "cur.execute('''SELECT COUNT''')"
    ]
   },
   {
