--- a/index.ipynb
+++ b/index.ipynb
@@ -140,7 +140,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT name, year''')"
+    "cur.execute('''SELECT COUNT (ya)''')"
    ]
   },
   {
