--- a/index.ipynb
+++ b/index.ipynb
@@ -140,7 +140,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT COUNT (year) FROM babe_ruth_stats WH''')"
+    "cur.execute('''SELECT COUNT (year) FROM babe_ruth_stats WHERE ''')"
    ]
   },
   {
