Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,12 +135,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(15,)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT COUNT (year) FROM babe_ruth_stats WHERE team = ''')"
+    "cur.execute('''SELECT COUNT (year) FROM babe_ruth_stats WHERE team ='NY' ''').fetchall()"
    ]
   },
   {
