Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "cur.execute('''SELECT COUNT (year) FROM babe_ruth_stats WHERE team ='NY' ''').fetchall()"
    ]
   },
   {
