Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -169,7 +169,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT COUNT (year) FROM babe_ruth_stats WHERE team ='NY' ''').fetchall()"
+    "cur.execute('''SELECT year FROM babe_ruth_stats WHERE team ='NY' ''').fetchall()"
    ]
   },
   {
