Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -151,7 +151,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT COUNT (year) FROM babe_ruth_stats WHERE team ='NY' ''').fetchall()"
+    "cur.execute('''SELECT COUNT (year) FROM babe_ruth_stats WHERE  ''').fetchall()"
    ]
   },
   {
