Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,23 +135,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[(15,)]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "OperationalError",
+     "evalue": "misuse of aggregate: MAX()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-626a06abcc34>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'''SELECT COUNT (year) FROM babe_ruth_stats WHERE MAX('hr') '''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: misuse of aggregate: MAX()"
+     ]
     }
    ],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT COUNT (year) FROM babe_ruth_stats WHERE  ''').fetchall()"
+    "cur.execute('''SELECT COUNT (year) FROM babe_ruth_stats WHERE MAX('hr') ''').fetchall()"
    ]
   },
   {
