Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -152,7 +152,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "#\n",
+    "#unlear where to place max function\n",
     "cur.execute('''SELECT year FROM babe_ruth_stats WHERE MAX(hr)''').fetchall()"
    ]
   },
