Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,7 +196,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT year FROM babe_ruth_stats WHERE team ='NY' ''').fetchall()"
+    "cur.execute('''SELECT COUNTyear FROM babe_ruth_stats WHERE team ='NY' ''').fetchall()"
    ]
   },
   {
