Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -166,37 +166,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1920,),\n",
-       " (1921,),\n",
-       " (1922,),\n",
-       " (1923,),\n",
-       " (1924,),\n",
-       " (1925,),\n",
-       " (1926,),\n",
-       " (1927,),\n",
-       " (1928,),\n",
-       " (1929,),\n",
-       " (1930,),\n",
-       " (1931,),\n",
-       " (1932,),\n",
-       " (1933,),\n",
-       " (1934,)]"
+       "[(15,)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT COUNTyear FROM babe_ruth_stats WHERE team ='NY' ''').fetchall()"
+    "cur.execute('''SELECT COUNT(year) FROM babe_ruth_stats WHERE team ='NY' ''').fetchall()"
    ]
   },
   {
