Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,25 +135,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OperationalError",
-     "evalue": "misuse of aggregate function MAX()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-2271a652672d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'''SELECT year FROM babe_ruth_stats WHERE MAX(hr)'''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m: misuse of aggregate function MAX()"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here\n",
     "#unlear where to place max function\n",
-    "cur.execute('''SELECT year FROM babe_ruth_stats WHERE MAX(hr)''').fetchall()"
+    "cur.execute('''SELECT year FROM babe_ruth_stats ORDER BY hr LIMIT 1''').fetchall()"
    ]
   },
   {
