Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,13 +135,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1914, 0)]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
     "#unlear where to place max function\n",
-    "cur.execute('''SELECT year FROM babe_ruth_stats ORDER BY hr LIMIT 1''').fetchall()"
+    "cur.execute('''SELECT year, hr FROM babe_ruth_stats ORDER BY hr LIMIT 1''').fetchall()"
    ]
   },
   {
