Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1914, 0)]"
+       "[(1927, 60)]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
    "source": [
     "# Your code here\n",
     "#unlear where to place max function\n",
-    "cur.execute('''SELECT year, hr FROM babe_ruth_stats ORDER BY hr LIMIT 1''').fetchall()"
+    "cur.execute('''SELECT year, hr FROM babe_ruth_stats ORDER BY hr DESC LIMIT 1''').fetchall()"
    ]
   },
   {
