Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -194,11 +194,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1914, 0)]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "cur.execute('''SELECT year, hr FROM babe_ruth_stats ORDER BY hr ASC LIMIT 1''').fetchall()"
    ]
   },
   {
