Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "cur.execute('''SELECT year, hr FROM babe_ruth_stats ORDER BY hr ASC LIMIT 1''').fetchall()"
    ]
   },
   {
