--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT year, hr FROM babe_ruth_stats ORDER BY hr ASC LIMIT 1''').fetchall()"
+    "cur.execute('''SELECT year, hr FROM babe_ruth_stats SUM hr ASC LIMIT 1''').fetchall()"
    ]
   },
   {
