--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT year, hr FROM babe_ruth_stats ORDER BY hr ASC Hav LIMIT 1''').fetchall()"
+    "cur.execute('''SELECT year, hr FROM babe_ruth_stats ORDER BY hr ASC HAVING games played >=100''').fetchall()"
    ]
   },
   {
