Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -262,14 +262,14 @@
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-101d1634e11b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'''SELECT year, hr FROM babe_ruth_stats ORDER BY hr ASC WHERE games played >=100'''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-32-06e91e1808e4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'''SELECT year, hr FROM babe_ruth_stats ORDER BY hr WHERE games >=100'''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mOperationalError\u001b[0m: near \"WHERE\": syntax error"
      ]
     }
    ],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT year, hr FROM babe_ruth_stats ORDER BY hr WHERE games played >=100''').fetchall()"
+    "cur.execute('''SELECT year, hr FROM babe_ruth_stats ORDER BY hr WHERE games >=100''').fetchall()"
    ]
   },
   {
