--- a/index.ipynb
+++ b/index.ipynb
@@ -269,7 +269,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT year, hr FROM babe_ruth_stats ORDER BY hr IF games >=100''').fetchall()"
+    "cur.execute('''SELECT year, hr FROM babe_ruth_stats ORDER BY hr HAVING games >=100''').fetchall()"
    ]
   },
   {
