--- a/index.ipynb
+++ b/index.ipynb
@@ -252,24 +252,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "ename": "OperationalError",
-     "evalue": "near \"IF\": syntax error",
+     "evalue": "near \"HAVING\": syntax error",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-33-40f10ea7121c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'''SELECT year, hr FROM babe_ruth_stats ORDER BY hr IF games >=100'''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m: near \"IF\": syntax error"
+      "\u001b[0;32m<ipython-input-35-eefae027ef62>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'''SELECT year, hr FROM babe_ruth_stats ORDER BY hr HAVING games >=100;'''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: near \"HAVING\": syntax error"
      ]
     }
    ],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT year, hr FROM babe_ruth_stats ORDER BY hr HAVING(games) >=100;''').fetchall()"
+    "#having games \n",
+    "cur.execute('''SELECT year, hr FROM babe_ruth_stats ORDER BY hr HAVING games >=100;''').fetchall()"
    ]
   },
   {
