--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "cur.execute('''SELECT AVG(avg) FROM babe_ruth_stats''').fetchall()"
    ]
   },
   {
