Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,12 +283,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0.3228636363636364,)]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT AVG(avg) FROM babe_ruth_stats''').fetchall()"
+    "cur.execute('''SELECT AVG(avg) as  FROM babe_ruth_stats''').fetchall()"
    ]
   },
   {
