Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -292,14 +292,14 @@
        "[(0.3228636363636364,)]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT AVG(avg) as  FROM babe_ruth_stats''').fetchall()"
+    "cur.execute('''SELECT AVG(avg) AS career_average FROM babe_ruth_stats;''').fetchall()"
    ]
   },
   {
