Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -317,7 +317,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT SUM(years) AS y''')"
+    "cur.execute('''SELECT SUM(years) AS num_years AND SUM(hits) AS to''')"
    ]
   },
   {
