--- a/index.ipynb
+++ b/index.ipynb
@@ -329,7 +329,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT years SUM(years) AS num_years, SUM(hits) AS total_hits;''').fetchall()"
+    "cur.execute('''SELECT COUNT(years) SUM(years) AS num_years, SUM(hits) AS total_hits;''').fetchall()"
    ]
   },
   {
