Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -312,23 +312,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(22, 22)]"
+       "[(22, 2873)]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT COUNT(year) AS num_years, COUNT(hits) AS total_hits FROM babe_ruth_stats;''').fetchall()"
+    "cur.execute('''SELECT COUNT(year) AS num_years, SUM(hits) AS total_hits FROM babe_ruth_stats;''').fetchall()"
    ]
   },
   {
@@ -345,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n"
    ]
   },
   {
