--- a/index.ipynb
+++ b/index.ipynb
@@ -345,7 +345,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "cur.execute('''SELECT ''')"
    ]
   },
   {
