--- a/index.ipynb
+++ b/index.ipynb
@@ -346,7 +346,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT ''')"
+    "cur.execute('''SELECT years''')"
    ]
   },
   {
