Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -346,7 +346,8 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT years''')"
+    "\n",
+    "cur.execute('''SELECT years, on_base WHERE on_base > 300''')"
    ]
   },
   {
