Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -347,7 +347,7 @@
    "source": [
     "# Your code here\n",
     "\n",
-    "cur.execute('''SELECT years, on_base WHERE on_base > 300''')"
+    "cur.execute('''SELECT years, on_base WHERE on_base > 300''').fetchall()"
    ]
   },
   {
