Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -341,23 +341,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(322,), (349,), (375,), (342,), (328,), (329,), (310,), (322,), (327,)]"
+       "[(1920, 322),\n",
+       " (1921, 349),\n",
+       " (1923, 375),\n",
+       " (1924, 342),\n",
+       " (1926, 328),\n",
+       " (1927, 329),\n",
+       " (1928, 310),\n",
+       " (1930, 322),\n",
+       " (1931, 327)]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "cur.execute('''SELECT hits + BB AS on_base FROM babe_ruth_stats WHERE on_base > 300''').fetchall()"
+    "cur.execute('''SELECT year, hits + BB AS on_base FROM babe_ruth_stats WHERE on_base > 300''').fetchall()"
    ]
   },
   {
